--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -128,3 +127,18 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Ignore frontend build files
+/frontend/build
+/frontend/node_modules
+
+# Ignore backend dependencies
+/backend/node_modules
+
+.idea
+.DS_Store
+.vscode/
+backend/.DS_Store
+frontend/.gitignore
+frontend/README.md
+
