added role-based functionality to both frontend and backend as well as database

--- a/.gitignore
+++ b/.gitignore
@@ -134,7 +134,7 @@ dist
 
 # Ignore backend dependencies
 /backend/node_modules
-/backend/setupAdmin.js
+/backend/scripts
 .idea
 .DS_Store
 .vscode/
